2009-03-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Moved replacement functions into their own submenu.


2009-03-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Use a text field with pull down instead of a normal combo box for
   font size at LaTeX wizard.


2009-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/geanylatex.tex: Added documentation written in LaTeX.


2009-03-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Replace \u-UTF-8 letters by octal coded chars. Huge thanks to
   Dominic Hopf for providing patch and fighting that fight.
 * Added a menu entry for bulk replace function and fixed a segfault at
   replacing


2009-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a function to bulk replace special characters
   inside marked text by keybinding


2009-03-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Don't offer insert environment dialog in case of no document is open.


2009-03-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Insert environment now supports selections by position \begin{} and
   \end{} around


2009-02-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Don't react on some keybindings in case of no document is open.
 * Added a feature for easy inserting environments to document.
 * Added keybinding to insert \item into document. Very useful at
   e.g. writing lists


2009-02-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Formating of selected text
 * Added feature to replace special characters at input with LaTeX
   replacment


2009-02-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a menu entry for easy formating of text


2009-02-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a keyboard shortcut for inserting a new line ( \\ ).
 * Make cursor placed behind inserted text for most cases.
   (Inserting BibTeX entries will not reset the cursor)


2009-01-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
